--- a/WebContent/publ/src/css/style.css
+++ b/WebContent/publ/src/css/style.css
@@ -9,23 +9,25 @@ header, footer, section {
 	margin: 10px 10px;
 }
 
-header {
-	overflow: hidden;
-}
-
 li {
 	list-style: none;
-	box-shadow: 3px 3px 3px grey;
+	box-shadow: 3px 3px 3px gray;
 	text-align: center;
 }
 
+#header-ul {
+	margin-left: 60%;
+	margin-bottom: 15px;
+}
+
 #header-ul li {
-	float: right;
-	width: 100px;
+	display: inline-block; width : 100px;
 	background-color: #00ff92;
 	padding: 20px 20px;
 	margin: 20px 10px;
 	text-align: center;
+	width: 100px;
+	width: 100px
 }
 
 #header-ul li a:link {
@@ -33,11 +35,9 @@ li {
 	text-decoration: none;
 }
 
-#header-ul {
-	margin-bottom: 15px;
+#header-ul li a:hover {
+	color: #caad18;
 }
-
-
 
 footer {
 	text-align: center;
