--- a/WebContent/css/aboutme.css
+++ b/WebContent/css/aboutme.css
@@ -1,22 +1,17 @@
-@charset "EUC-KR";
+@charset "UTF-8";
 
 p {
 	text-align: left;
-	margin:0;
+	margin: 0;
 }
-strong{
-	font-size: 2em;
-	font-weight:800;	
-}
-.aboutMeSection{
+
+.aboutMeSection {
 	display: flex;
 	flex-direction: column;
 	justify-content: left;
 	align-items: flex-start;
 }
 
-.aboutMeArticle{
-	margin:10px;
-	margin-right: 10em;
-	margin-left: 10em;
-} 
+.aboutMeArticle {
+	margin: 10px 10em 10px 10em;
+}
