--- a/WebContent/css/base.css
+++ b/WebContent/css/base.css
@@ -1,4 +1,5 @@
-@charset "EUC-KR";
+@charset "UTF-8";
+
 body {
 	background-color: #42e5b1;
 	font-family: 'Nanum Gothic', sans-serif;
@@ -9,23 +10,23 @@ img {
 	object-fit: contain;
 }
 
-h1 {
-	margin: 0px;
-	font-weight: 800;
-	font-size:2em;
-}
-
 p {
-	line-height:2
+	line-height: 2;
 }
 
-#footerParagraph{
-	margin : 0px;
+p strong {
+	font: 2em bold;
+	margin: 0;
 }
+
+#footerParagraph {
+	margin: 0px;
+}
+
 .sections {
 	background-color: white;
 	margin-top: 10px;
-	padding: 20px;
+	padding: 30px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -45,24 +46,40 @@ ul#navMenu {
 }
 
 ul#navMenu li {
-	display: inline;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin-left: 10px;
 }
 
+ul#navMenu li>a {
+	text-decoration: none;
+	display: block;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .button {
 	background-color: #2fa8a0;
 	border-radius: 0.5em;
 	box-shadow: 0.5em 0.5em #888888;
+	font-family: 'Nanum Gothic', sans-serif;
+}
+
+.button:hover {
+	cursor: pointer;
+}
+
+.button:active {
+	background-color: #0f8880;
+	box-shadow: 0 5px #666;
+	transform: translateY(4px);
 }
 
 .navButton {
 	width: 10em;
 	height: 3em;
-}
-
-.navButton>a {
-	text-decoration: none;
 }
