--- a/WebContent/css/photo.css
+++ b/WebContent/css/photo.css
@@ -1,30 +1,31 @@
-@charset "EUC-KR";
+@charset "UTF-8";
 
 p {
 	line-height: 2
 }
 
 img {
-	border: solid;
-	border-width: 10px;
-	border-color: #333333;
+	border: solid 10px #333333;
+}
+
+hr {
+	width: 100%;
+	height: 5px;
+	background-color: gray;
+	opacity: 0.5;
 }
 
 .photoArticle {
 	display: flex;
 	align-items: flex-start;
-	margin: 20px;
-	margin-right: 10em;
-	margin-left: 10em;
+	margin: 20px 10em 20px 10em;
 	width: 50em;
 }
 
 .photoImg {
 	width: 20em;
-	margin-right: 3em;
-	margin-top: 0px;
-	border: solid;
-	border-color: #666666
+	margin: 0 3em 0 0;
+	border: solid #666666;
 }
 
 .photoContent {
