--- a/WebContent/layout.css
+++ b/WebContent/layout.css
@@ -13,7 +13,7 @@ nav {
 	justify-content: flex-end;
 }
 
-#navList {
+.navList {
 	list-style: none;
 	text-align: right;
 	padding: 10px;
@@ -21,7 +21,8 @@ nav {
 
 .kategorie {
 	width: 100px;
-	height: 50px; display : inline-block;
+	height: 50px;
+	display: inline-block;
 	background-color: #ABF200;
 	box-shadow: 3px 3px 3px #aaa;
 	display: inline-block;
@@ -36,7 +37,7 @@ nav {
 	justify-content: center;
 }
 
-#footer {
+.footer {
 	height: 100px;
 	background-color: #FFF;
 	margin: 10px auto;
