--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,12 +1,25 @@
 
 @charset "UTF-8";
 
+body {
+	background-color: #b5dbee
+}
+
 nav {
 	text-align:right;
+	padding: 15px;
+	margin-bottom: 15px;
+	background-color: white;
+}
+
+div {
+	padding: 10px;
+	background-color: white;
 }
 
 button {
 	cursor: pointer;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
 }
 
 .button_nav {
@@ -29,12 +42,7 @@ button {
 
 footer {
 	text-align:center;
-}
-
-hr {
-	height: 10px;
-	background-color: lightblue;
-	border-color: white;
-	margin-top: 20px;
-	margin-bottom: 20px;
+	padding: 15px;
+	margin-top: 15px;
+	background-color: white;
 }
