--- a/WebContent/index.css
+++ b/WebContent/index.css
@@ -27,12 +27,12 @@
 	margin: 0px auto;
 }
 
-.buttonList {
+.button_list {
 	list-style: none;
 	padding: 0;
 }
 
-.btnKategorie {
+.btn_kategorie {
 	width: 100px;
 	height: 100px;
 	display: inline-block;
@@ -41,7 +41,7 @@
 	box-shadow: 3px 3px 3px #aaa;
 }
 
-.btnKategorie>a {
+.btn_kategorie>a {
 	text-decoration: none;
 	width: 100%;
 	height: 100%;
