--- a/WebContent/css/base.css
+++ b/WebContent/css/base.css
@@ -20,7 +20,7 @@ p strong {
 	margin: 0;
 }
 
-#footerParagraph {
+#footer_paragraph {
 	margin: 0px;
 }
 
@@ -38,7 +38,7 @@ p strong {
 	align-items: flex-end;
 }
 
-ul#navMenu {
+ul#nav_menu {
 	padding: 0px;
 	margin: 10px;
 	display: flex;
@@ -46,14 +46,14 @@ ul#navMenu {
 	justify-content: flex-end;
 }
 
-ul#navMenu li {
+ul#nav_menu li {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin-left: 10px;
 }
 
-ul#navMenu li>a {
+ul#nav_menu li>a {
 	text-decoration: none;
 	display: block;
 	width: 100%;
@@ -80,7 +80,7 @@ ul#navMenu li>a {
 	transform: translateY(4px);
 }
 
-.navButton {
+.nav_button {
 	width: 10em;
 	height: 3em;
 }
