--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -4,12 +4,12 @@ p {
 	text-align: center;
 }
 
-.indexContentParagraph {
+.index_content_paragraph {
 	margin: 0;
 	padding: 0;
 }
 
-.contentButton {
+.index_content_button {
 	width: 10em;
 	height: 10em;
 	color: rgb(255, 255, 255);
@@ -17,7 +17,7 @@ p {
 	margin-bottom: 25px;
 }
 
-.contentButton>a {
+.index_contentButton>a {
 	text-decoration: none;
 	color: white;
 	font-size: 1.5em;
