--- a/WebContent/index.css
+++ b/WebContent/index.css
@@ -2,7 +2,7 @@
 
 .main_content {
 	display: block;
-	background-color: #FFF;
+	background-color: #fff;
 	margin: 0 auto;
 	padding: 80px 10px;
 }
@@ -37,7 +37,7 @@
 	height: 100px;
 	display: inline-block;
 	margin: 10px;
-	background-color: #ABF200;
+	background-color: #abf200;
 	box-shadow: 3px 3px 3px #aaa;
 }
 
