--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -1,13 +1,13 @@
 @charset "UTF-8";
 
-.main_content {
+.content_area {
 	display: block;
 	background-color: #fff;
 	margin: 0 auto;
 	padding: 80px 10px;
 }
 
-.main_content>* {
+.content_area>* {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -21,7 +21,7 @@
 	text-align: center;
 }
 
-.main_content>img {
+.content_area>img {
 	max-width: 1000px;
 	display: block;
 	margin: 0px auto;
