--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -3,10 +3,13 @@ body {
 }
 
 header, section, footer {
+	position : relative;
 	background-color : white;
 	margin : 20px;
 }
-
+header {
+	height : 100px;
+}
 section {
 	padding : 20px;
 	text-align : center;
@@ -14,11 +17,14 @@ section {
 
 footer {
 	height : 100px;
-	line-height : 116px;
 	text-align : center;
 }
 
 #web {
+	position : absolute;
+	top : 50%;
+	left : 50%;
+	transform:translate(-50%, -50%);
 	display : inline-block;
 	line-height : 20px;
 }
@@ -26,16 +32,18 @@ footer {
 span {
 	display : block;
 }
-
-.menu {
+.menu-nav {
+	position : absolute;
+	right : 0%;
+	top : 50%;
+	transform:translate(0%, -50%);
 	margin : 0px;
 	padding : 0px 10px;
-	height : 100px;
-	line-height : 100px;
-	list-style : none;
-	text-align : right;
 }
-
+.menu {
+	position : relative;
+	list-style : none;
+}
 .menu-item {
 	display : inline-block;
 	width : 150px;
@@ -74,11 +82,6 @@ section > ul {
 	margin : 10px 0px;
 }
 
-.content-list {
-	text-align : center;
-	width : 100%;
-}
-
 .content {
 	display : inline-block;
 	text-align : left;
@@ -87,9 +90,9 @@ section > ul {
 }
 
 .photo {
+	float : left;
 	width : 400px;
 	border : 10px solid #abcdef;
-	align : left;
 	margin-right : 50px;
 }
 
