--- a/WebContent/css/base.css
+++ b/WebContent/css/base.css
@@ -6,8 +6,11 @@ body {
 }
 
 img {
-	display: inline-block;
+	display: block;
 	object-fit: contain;
+	margin-left: auto;
+	margin-right: auto;
+	width: 80%;
 }
 
 p {
@@ -20,47 +23,39 @@ p strong {
 	margin: 0;
 }
 
-#footer_paragraph {
-	margin: 0px;
+a {
+	width: 100%;
+	height: 100%;
+}
+
+nav {
+	display: inline-block;
+	position: relative;
+	left: 220px;
+}
+
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+li {
+	margin: 0 0 0 0;
+	padding: 0 0 0 0;
+	border: 0;
+	float: left;
 }
 
 .sections {
 	background-color: white;
 	margin-top: 10px;
 	padding: 30px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-
-.sections#navbar {
-	align-items: flex-end;
-}
-
-ul#nav_menu {
-	padding: 0px;
-	margin: 10px;
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-end;
-}
-
-ul#nav_menu li {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-left: 10px;
-}
-
-ul#nav_menu li>a {
-	text-decoration: none;
 	display: block;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+}
+
+.nav_menu {
+	margin: 10px;
 }
 
 .button {
@@ -68,6 +63,7 @@ ul#nav_menu li>a {
 	border-radius: 0.5em;
 	box-shadow: 0.5em 0.5em #888888;
 	font-family: 'Nanum Gothic', sans-serif;
+	display: table;
 }
 
 .button:hover {
@@ -83,4 +79,14 @@ ul#nav_menu li>a {
 .nav_button {
 	width: 10em;
 	height: 3em;
+	margin: 10px;
+}
+
+.button a {
+	position: relative;
+	width: 100%;
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+	text-decoration: none;
 }
