--- a/WebContent/css/photo.css
+++ b/WebContent/css/photo.css
@@ -11,11 +11,17 @@ hr {
 	opacity: 0.5;
 }
 
+tr{
+	display:table-cell;
+}
+tr{
+	vertical-align:top;
+}
+
 .photo_article {
-	display: flex;
-	align-items: flex-start;
-	margin: 20px 10em 20px 10em;
-	width: 50em;
+	margin: 0 10em 0 10em;
+    text-align: left;
+    width:auto;
 }
 
 .photo_img {
@@ -25,8 +31,5 @@ hr {
 }
 
 .photo_content {
-	display: flex;
-	align-items: flex-start;
-	width: 60em;
-	margin-top: 0px;
+	width: auto;
 }
