--- a/WebContent/css/aboutme.css
+++ b/WebContent/css/aboutme.css
@@ -4,11 +4,10 @@ p {
 	text-align: left;
 }
 
-.about_me_section {
-	float:left;
-	display:block;
-}
-
 .about_me_article {
 	margin: 10px 10em 10px 10em;
+}
+
+hr{
+	width:0;
 }
