--- a/WebContent/css/photo.css
+++ b/WebContent/css/photo.css
@@ -4,32 +4,17 @@ img {
 	border: solid 10px #333333;
 }
 
-hr {
-	width: 100%;
-	height: 5px;
-	background-color: gray;
-	opacity: 0.5;
-}
-
-tr{
-	display:table-cell;
-}
-tr{
-	vertical-align:top;
+tr {
+	display: table-cell;
+	vertical-align: top;
 }
 
 .photo_article {
-	margin: 0 10em 0 10em;
-    text-align: left;
-    width:auto;
+	margin: 10px 10% 10px 10%;
 }
 
 .photo_img {
 	width: 20em;
 	margin: 0 3em 0 0;
 	border: solid #666666;
-}
-
-.photo_content {
-	width: auto;
 }
