현재 시간 페이지 완료

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -56,3 +56,10 @@ footer {
 	margin-top: 15px;
 	background-color: white;
 }
+
+#today {
+	text-align:center;
+	font-size: 40px;
+	font-weight: bold;
+	margin-top: 100px;
+}
