--- a/WebContent/index.css
+++ b/WebContent/index.css
@@ -16,23 +16,14 @@
 	width: 100px;
 	height: 20px;
 	background-color: #75B6D7;
-	box-shadow: 3px 3px 3px #aaaaaa;
-	-webkit-box-align: middle!important;
+	box-shadow: 3px 3px 3px #aaa;
 	padding: 30px 0;
 }
 
 img {
 	width : 80%;
 }
-a:link {
+
+.content a {
 	color: #FFF;
-}
-a:visited {
-	color: #333333;
-}
-a:active {
-	color: #ABC;
-}
-a:hover {
-	color: #CDA;
 }
