--- a/WebContent/layout.css
+++ b/WebContent/layout.css
@@ -3,7 +3,9 @@ body {
 }
 
 body > * {
-	width: 1200px;
+	max-width: 1200px;
+	
+	min-width: 400px;
 	background-color: #FFF;
 	margin: 5px auto;
 	text-align: center;
@@ -25,18 +27,16 @@ header ul {
 
 header li {
 	display: inline-block;
-}
-
-header li div {
-	display: inline-block;
 	background-color: #75B6D7;
 	width: 100px;
 	height: 25px;
-	box-shadow: 3px 2px #aaaaaa;
+	box-shadow: 3px 2px #aaa;
 	vertical-align: middle;
 	padding: 5px;
 }
-
+header a {
+	color: #000;
+}
 .content {
 	padding: 10px;
 }
@@ -49,3 +49,14 @@ footer {
 p {
 	margin: 0;
 }
+a {
+	
+	display: block;
+	width: 100%;
+	height: 100%;
+	text-decoration: none;
+}
+a:hover {
+	color: #BD9;
+}
+
