--- a/WebContent/photo.css
+++ b/WebContent/photo.css
@@ -8,29 +8,27 @@ img {
 }
 
 article {
-	width:100%;
+	width:90%;
 	min-height:200px;
 	position:relative;
 	overflow:hidden;
+	margin: 0 auto;
 }
 
 article .photo {
 	position:absolute;
 	top:0;
-	left:10px;
+	left:0;
 	width:300px;
 	height:200px;
 }
 
 article .photo_info {
-	
-	box-sizing: border-box;
 	text-align: left;
 	padding-left: 20px;
 	position:absolute;
 	top:0;
 	left:0px;
 	margin-left:300px;
-	width:800px;
 	height: 200px;
 }
