--- a/WebContent/css/aboutme.css
+++ b/WebContent/css/aboutme.css
@@ -7,12 +7,16 @@
 	padding: 80px 80px;
 }
 
-.content {
+.each_content {
+	width: 100%;
 	height: 150px;
-	margin: 20px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	margin: 20px 0;
+	display: table;
+}
+
+.content {
+	display: table-cell;
+	vertical-align: middle;
 }
 
 .title {
