--- a/WebContent/css/layout.css
+++ b/WebContent/css/layout.css
@@ -7,34 +7,31 @@
 .kategorie_section {
 	height: 100px;
 	background-color: #fff;
-	margin: 10px auto;
 	display: flex;
+	margin: 10px auto;
 	align-items: center;
 	justify-content: flex-end;
 }
 
 .nav_list {
 	list-style: none;
-	text-align: right;
 	padding: 10px;
 }
 
-.kategorie {
+.kategorie_list {
 	width: 100px;
 	height: 50px;
-	display: inline-block;
+	display: inline-table;
+	margin: 10px;
 	background-color: #abf200;
 	box-shadow: 3px 3px 3px #aaa;
-	display: inline-block;
 }
 
-.kategorie>a {
+.kategorie {
 	text-decoration: none;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
 }
 
 .footer {
