--- a/WebContent/css/aboutme.css
+++ b/WebContent/css/aboutme.css
@@ -1,10 +1,11 @@
 @charset "UTF-8";
 
 .content_area {
+	width: 95%;
 	display: block;
 	background-color: #fff;
 	margin: 0 auto;
-	padding: 80px 80px;
+	padding: 80px 40px;
 }
 
 .each_content {
@@ -23,4 +24,8 @@
 	font-size: 1.5em;
 	margin: 0;
 	font-weight: bold;
+}
+
+.substance {
+	margin: 0;
 }
