--- a/WebContent/css/photo.css
+++ b/WebContent/css/photo.css
@@ -1,10 +1,11 @@
 @charset "UTF-8";
 
 .content_area {
+	width: 95%;
 	display: block;
 	background-color: #fff;
 	margin: 0 auto;
-	padding: 80px 10px;
+	padding: 80px 40px;
 }
 
 .each_content {
