--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,4 +1,3 @@
-
 @charset "UTF-8";
 
 body {
@@ -6,7 +5,7 @@ body {
 }
 
 nav {
-	text-align:right;
+	text-align: right;
 	padding: 15px;
 	margin-bottom: 15px;
 	background-color: white;
@@ -29,7 +28,8 @@ div {
 
 button {
 	cursor: pointer;
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0
+		rgba(0, 0, 0, 0.19);
 }
 
 .button_nav {
@@ -51,15 +51,17 @@ button {
 }
 
 footer {
-	text-align:center;
+	text-align: center;
 	padding: 15px;
 	margin-top: 15px;
 	background-color: white;
 }
 
 #today {
-	text-align:center;
 	font-size: 40px;
 	font-weight: bold;
-	margin-top: 100px;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
