--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -1,4 +1,4 @@
-body {
+#background {
 	background-color : #abcdef;
 }
 
@@ -7,9 +7,11 @@ header, section, footer {
 	background-color : white;
 	margin : 20px;
 }
+
 header {
 	height : 100px;
 }
+
 section {
 	padding : 20px;
 	text-align : center;
@@ -20,18 +22,11 @@ footer {
 	text-align : center;
 }
 
-#web {
-	position : absolute;
-	top : 50%;
-	left : 50%;
-	transform:translate(-50%, -50%);
-	display : inline-block;
-	line-height : 20px;
+.menu {
+	position : relative;
+	list-style : none;
 }
 
-span {
-	display : block;
-}
 .menu-nav {
 	position : absolute;
 	right : 0%;
@@ -40,10 +35,7 @@ span {
 	margin : 0px;
 	padding : 0px 10px;
 }
-.menu {
-	position : relative;
-	list-style : none;
-}
+
 .menu-item {
 	display : inline-block;
 	width : 150px;
@@ -58,16 +50,26 @@ span {
 	box-shadow : 2px 2px 1px 0px gray;
 }
 
-.map {
-	width : 800px;
-	height: auto;
+.title {
+	font-size : 32px;
+	font-weight : bold;
+	margin : 10px 0px;
 }
 
-section > ul {
+#web-address {
+	position : absolute;
+	top : 50%;
+	left : 50%;
+	transform:translate(-50%, -50%);
+	display : inline-block;
+	line-height : 20px;
+}
+
+.content-list {
 	padding : 0px;
 }
 
-.caption {
+.link-content {
 	display : inline-block;
 	background-color : #abcdef;
 	width : 100px;
@@ -76,35 +78,9 @@ section > ul {
 	margin : 0px 15px;
 }
 
-.title {
-	font-size : 32px;
-	font-weight : bold;
-	margin : 10px 0px;
-}
-
 .content {
 	display : inline-block;
 	text-align : left;
 	width : 80%;
 	padding : 50px;
-}
-
-.photo {
-	float : left;
-	width : 400px;
-	border : 10px solid #abcdef;
-	margin-right : 50px;
-}
-
-.photo-caption > span {
-	margin : 10px 0px;
-	font-size : 20px;
-}
-
-#photo-section .content {
-	border-bottom : 1px solid grey;
-}
-
-#photo-section .content:nth-last-of-type(1) {
-	border-bottom : 0px;
 }
