hotfix: css 변경 및 html 태그 변경 , TodayServlet 불필요한 주석 제거

--- a/WebContent/aboutme_static/src/css/aboutme.css
+++ b/WebContent/aboutme_static/src/css/aboutme.css
@@ -4,11 +4,16 @@ section {
 	padding: 20px;
 }
 
-section div {
+.my-info {
 	margin-left: 10%;
 }
 
-section div:nth-child(2n) {
+.my-info:nth-child(2n) {
 	margin-top: 4%;
 	margin-bottom: 4%;
+}
+
+.title {
+	font-size: 30px;
+	font-weight: bold;
 }
