--- a/WebContent/aboutme_static/src/css/index.css
+++ b/WebContent/aboutme_static/src/css/index.css
@@ -11,6 +11,9 @@ section {
 	background-color: #00ff92;
 	padding: 30px;
 	display: inline-block;
+	list-style: none;
+	box-shadow: 3px 3px 3px gray;
+	text-align: center;
 }
 
 #section-ul {
@@ -30,4 +33,9 @@ section {
 
 #my-location {
 	clear: both;
+}
+
+#title {
+	font-size: 30px;
+	font-weight: bold;
 }
