--- a/WebContent/aboutme_static/src/css/style.css
+++ b/WebContent/aboutme_static/src/css/style.css
@@ -9,7 +9,7 @@ header, footer, section {
 	margin: 10px 10px;
 }
 
-li {
+#header-ul li {
 	list-style: none;
 	box-shadow: 3px 3px 3px gray;
 	text-align: center;
@@ -43,7 +43,7 @@ footer {
 	text-align: center;
 }
 
-footer div {
+.footer-info {
 	color: #8c24ad;
 }
 
