--- a/WebContent/css/base.css
+++ b/WebContent/css/base.css
@@ -4,7 +4,6 @@ body {
 	background-color: #42e5b1;
 	font-family: 'Nanum Gothic', sans-serif;
 	display: block;
-	padding: 10px;
 }
 
 img {
@@ -19,18 +18,20 @@ p {
 	margin: 0;
 }
 
-p strong {
-	font: 2em bold;
+h1 {
+	font-size: 2em;
+	margin: 0;
+	line-height: 2;
 	margin: 0;
 }
 
-p#footer_paragraph {
-	text-align: center;
+tr {
+	display: table-cell;
+	vertical-align: top;
 }
 
-a {
-	width: 100%;
-	height: 100%;
+footer>p {
+	text-align: center;
 }
 
 ul {
@@ -41,11 +42,17 @@ li {
 	float: left;
 }
 
-.sections {
+header, footer, section {
 	background-color: white;
 	margin: 10px;
 	padding: 20px;
 	overflow: auto;
+}
+
+article {
+	margin: 10px 10% 10px 10%;
+	height: 33.3%;
+	padding: 10px;
 }
 
 .button {
@@ -55,17 +62,17 @@ li {
 	display: table;
 }
 
-.button:hover {
-	cursor: pointer;
-}
-
 .button:active {
 	background-color: #0f8880;
 	box-shadow: 0 5px #666;
 	transform: translateY(4px);
 }
 
-.nav_menu {
+.center_text {
+	text-align: center;
+}
+
+.float_right {
 	float: right;
 }
 
@@ -81,4 +88,26 @@ li {
 	text-align: center;
 	text-decoration: none;
 	color: ghostwhite;
+	width: 100%;
+	height: 100%;
+}
+
+.index_content_menu {
+	display: table;
+	margin: 0 auto 10px auto;
+}
+
+.index_content_button {
+	width: 5em;
+	height: 5em;
+	margin: 10px;
+	color: white;
+	font-size: 1.5em;
+}
+
+.photo_img {
+	border: solid 10px #333333;
+	width: 20em;
+	margin: 0 3em 0 0;
+	border: solid #666666;
 }
