--- a/WebContent/aboutme.css
+++ b/WebContent/aboutme.css
@@ -3,8 +3,7 @@
 .content_list {
 	list-style-type: none;
 	padding: 0;
-	display: flex;
-	flex-direction: column;
+	display: inline-block;
 }
 
 .content_item {
@@ -12,18 +11,18 @@
 	margin: 15px auto;
 }
 
-.subject {
+.content_item > h1 {
 	margin: 2px 0;
 	font-weight: bold;
 	font-size: 30px;
 }
 
-.description {
+.content_item > p {
 	font-size: 15px;
 	margin: 2px 0;
 }
 
-.link {
+.content_item > a {
 	font-size: 15px;
 	text-decoration: none;
 }
