--- a/WebContent/header.css
+++ b/WebContent/header.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-.header > nav {
+header > nav {
 	overflow: hidden;
 }
 
@@ -16,12 +16,16 @@
 	background-color: #11af58;
 	margin: 1%;
 	width: 23%;
-	display: flex;
+	height: 40px;
 	box-shadow: 3px 3px 1.5px 1.5px gray;
 }
 
 .nav_item > a {
-	margin: 10px auto;
 	text-decoration: none;
+	cursor: pointer;
+	text-align: center;
+	display: inline-block;
+	line-height: 40px;
+	width: 100%;
 }
 
