--- a/WebContent/index.css
+++ b/WebContent/index.css
@@ -1,22 +1,20 @@
 @charset "UTF-8";
 
-.section {
-	display: flex;
-	flex-direction: column;
+section {
 	padding: 10px 0;
 }
 
-.greeting, .description, .profile_list, .map_image_container {
+section > h1, section > p, .profile_list, .map_image_container {
 	margin: 15px auto;
 }
 
-.greeting {
+section > h1 {
 	text-align: center;
 	font-weight: bold;
 	font-size: 30px;
 }
 
-.description {
+section > p {
 	text-align: center;
 	font-weight: bold;
 	font-size: 15px;
@@ -39,14 +37,17 @@
 	display: flex;
 }
 
-.profile_list_item > p {
-	margin: auto;
+
+.profile_list_item > a {
 	color: white;
-	height: 40px;
-	line-height: 40px;
+	width: 100px;
+	line-height: 100px;
+	text-align: center;
+	cursor: pointer;
+	text-decoration: none;
 }
 
-.profile_list_item > p:hover {
+.profile_list_item > a:hover {
 	color: gray;	
 }
 
