불필요한 주석 제거, 시간 출력을 Formatter로 변경, 중앙출력을 위해 css 조정

--- a/WebContent/css/today.css
+++ b/WebContent/css/today.css
@@ -1,5 +1,13 @@
 /*개별 페이지 스타일*/
-section {
+.date_container {
 	padding-top: 400px;
 	text-align: center;
+}
+
+.date {
+    font-size: 2em;
+    position: absolute;
+    top: 60%;
+    left: 45%;
+    margin: -150px;
 }
