--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -32,9 +32,7 @@
 }
 
 .link_category li {
-	width: 100px;
-	height: 100px;
-	display: inline-table;
+	display: inline-block;
 	margin: 10px;
 	background-color: #abf200;
 	box-shadow: 3px 3px 3px #aaa;
@@ -42,20 +40,32 @@
 
 .link_category a {
 	text-decoration: none;
-	display: table-cell;
-	vertical-align: middle;
+	display: block;
+	width: 100px;
+	height: 100px;
+	position: relative;
+}
+
+.link_category span {
+	display: inline-block;
+	width: 100%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .content {
 	width: 100%;
 	height: 150px;
 	margin: 20px 0;
-	display: table;
+	position: relative;
 }
 
 .content>article {
-	display: table-cell;
-	vertical-align: middle;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 .content p {
@@ -71,12 +81,13 @@
 	width: 100%;
 	height: 300px;
 	margin: 20px;
-	display: table;
+	position: relative;
 }
 
 .photo_content>article {
-	display: table-cell;
-	vertical-align: middle;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 .photo_content img {
@@ -90,4 +101,3 @@
 .photo_content p {
 	display: inline-block;
 }
-
