--- a/WebContent/css/base.css
+++ b/WebContent/css/base.css
@@ -9,7 +9,7 @@ body {
 img {
 	display: block;
 	margin: 0 auto;
-	width: 60%;
+	width: auto;
 }
 
 p {
@@ -49,8 +49,8 @@ header, footer, section {
 }
 
 article {
-	margin: 10px 10% 10px 10%;
-	height: 33.3%;
+	margin: 10px 2em 10px 2em;
+	height: auto;
 	padding: 10px;
 }
 
@@ -87,8 +87,8 @@ article {
 	text-align: center;
 	text-decoration: none;
 	color: ghostwhite;
-	width: 100%;
-	height: 100%;
+	width: auto;
+	height: auto;
 }
 
 .index_content_menu {
