--- a/WebContent/css/photo.css
+++ b/WebContent/css/photo.css
@@ -15,20 +15,16 @@ article {
 	margin: 0 auto;
 }
 
+article > div {
+	float: left;
+}
+
 article .photo {
-	position:absolute;
-	top:0;
-	left:0;
 	width:300px;
-	height:200px;
 }
 
 article .photo_info {
 	text-align: left;
-	padding-left: 20px;
-	position:absolute;
-	top:0;
-	left:0px;
-	margin-left:300px;
-	height: 200px;
+	padding-left: 30px;
+	
 }
