hotfix: 오프라인 미팅 수정사항 수정

--- a/WebContent/aboutme_static/css/index.css
+++ b/WebContent/aboutme_static/css/index.css
@@ -27,7 +27,7 @@ section {
 	text-decoration: none;
 }
 
-#section-ul li a:hover {
+#section-ul li:hover {
 	color: #caad18;
 }
 
@@ -38,4 +38,8 @@ section {
 #title {
 	font-size: 30px;
 	font-weight: bold;
+}
+
+#my-home {
+	width: 900px;
 }
