--- a/WebContent/css/today.css
+++ b/WebContent/css/today.css
@@ -1,29 +1,13 @@
 body {
-    position: relative;
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	padding: 0;
 }
 
-footer {
-    position: absolute;
-    bottom: 5px;
-    left: 0;
-    right: 0;
-    margin-bottom: 0;
-}
-
-.content {
-    position: absolute;
-	margin-left: auto;
-	margin-right: auto;
-	left: 0;
-	right: 0;
-    top: 100px;
-    bottom: 100px;
-	background-color: transparent;
-	min-height: 300px;
-}
-
-h1 {   
+h1 {
 	position: relative;
     top: 50%;
     transform: translateY(-50%);
+    margin: 0 auto;
 }
