--- a/WebContent/css/today.css
+++ b/WebContent/css/today.css
@@ -1,4 +1,5 @@
 body {
+	position: relative;
 	height: 100%;
 	width: 100%;
 	margin: 0;
@@ -6,8 +7,10 @@ body {
 }
 
 h1 {
-	position: relative;
-    top: 50%;
+	position: absolute;
+    top: 50vh;
+    left: 0;
+    right: 0;
     transform: translateY(-50%);
     margin: 0 auto;
 }
