특정 태그(div,p)를 불필요하게 사용하는 부분 삭제, 이전 디자인을 유지하기 위해 CSS 조절

--- a/WebContent/css/aboutme.css
+++ b/WebContent/css/aboutme.css
@@ -6,8 +6,11 @@ h2 {
 p {
 	margin-top: 0;
 }
+a {
+	margin:
+}
 
-.container>div {
+.container>article {
 	text-align: left;
-	padding: 10px 50px;
+	margin: 10px 10%;
 }
