--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -7,18 +7,15 @@ body {
 	text-align: right;
 }
 
-.container>a {
+.center_button{
+	width:100px;
+	height:70px;
+	padding-top:40px;
+	font-size:1.3em;
 	display: inline-block;
 	text-align: center;
 	color: white;
 	background: #8cbbc6;
-}
-
-.container>a>div {
-	width: 100px;
-	padding-top: 40px;
-	padding-bottom: 40px;
-	font-size: 1.3em;
 	box-shadow: 3px 3px 3px #aaaaaa;
 }
 
