--- a/WebContent/css/photo.css
+++ b/WebContent/css/photo.css
@@ -7,15 +7,18 @@ hr {
 	padding: 30px;
 }
 
-.container_item>img {
+.container>article {
+	display: inline-block;
+	margin-left: 30px;
+	overflow:auto;
+	width:90%;
+}
+
+.container>article>img {
 	width: 200px;
 	height: 150px;
 	border: 5px solid #aaa;
 	float: left;
+	margin-right: 40px;
 }
 
-.container_item>div {
-	display: inline-block;
-	padding-bottom: 150px;
-	margin-left: 30px;
-}
