--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -24,6 +24,11 @@ div {
 	float: left;
 	width: 200px;
 	margin: 20px;
+	border: 6px solid #808080;
+}
+
+.float-container p {
+	line-height: 200%;
 }
 
 button {
@@ -41,13 +46,21 @@ button {
 	width: 100px;
 }
 
+.button_nav:active {
+	color: #ee114e;
+}
+
 .button_square {
 	background-color: lightblue;
 	color: white;
 	font-size: 20px;
 	font-weight: bold;
-	height: 200px;
-	width: 200px;
+	height: 150px;
+	width: 150px;
+}
+
+.button_square:hover {
+	color: #d8d58d;
 }
 
 footer {
@@ -64,8 +77,29 @@ footer {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	margin: 0px;
 }
 
-#main {
+#index_main {
 	text-align: center;
+}
+
+#aboutme {
+	
+}
+
+#aboutme .title {
+	font-size: 25px;
+	font-weight: bold;
+	margin-top: 10px;
+	margin-left: 100px;
+	margin-right: 100px;
+	display: block;
+}
+
+#aboutme p {
+	margin-top: 0px;
+	margin-bottom: 20px;
+	margin-left: 100px;
+	margin-right: 100px;
 }
