--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,17 +1,16 @@
 @charset "UTF-8";
 
 html {
-   margin: 0px;
    height: 100%;
    width: 100%;
 }
-
+ 
 body {
-   margin: 0px;
-   min-height: 100%;
+   margin: 0;
+   padding: 0;
+   height: 100%;
    width: 100%;
 }
-
 
 /*
 	main.jsp css
@@ -43,12 +42,14 @@ body {
 	font-size: 30px;
 	line-height: 70px;
 }
+
 .todo_list_container {
 	display: inline-block;
 	position: absolute;
 	right: 10px;
 	top: 130px;
 }
+
 .todo_list_container > ul {
 	float: left;
 	list-style-type: none;
@@ -60,9 +61,9 @@ body {
 	padding: 0 15px;
 	margin: 20px 10px;
 }
+
 .todo_category {
 	background-color: #345461;
-	
 	font-size: 30px;
 	line-height: 60px;
 	color: white;
@@ -99,4 +100,90 @@ body {
 	right: 8px;
 	bottom: 8px;
 	cursor: pointer;
+}
+/*
+	todoForm.jsp css
+*/
+.todo_page_container {
+	width: 100%;
+	height: 100%;
+}
+.todo_page_container > h1 {
+	text-align: center;
+	font-size: 40px;
+	margin: 50px 0 15px;
+}
+.todo_form {
+	width: 500px;
+	height: 400px;
+	margin: 0 auto;
+	position: relative;
+}
+.todo_form > label {
+	display: block;
+	margin: 30px 0 4px;
+	padding: 0;
+	font-size: 20px;
+}
+.todo_form > input[type=text] {
+	width: 458px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	padding: 12px 20px;
+	font-size: 20px;
+}
+.todo_form > #todo_name_input {
+	width: 200px;
+}
+.radio_group {
+	display: block;
+	height: 20px;
+}
+.radio_group > input[type=radio] {
+	margin: 0;
+	width: 14px;
+	height: 14px;
+	margin: 3px 0;
+}
+.radio_group > label {
+	display: inline;
+	font-size:15px;
+	line-height: 20px;
+	margin: 0;
+}
+.back_btn {
+	position: absolute;
+	left: 0;
+	bottom: 20px;
+	text-decoration: underline;
+	display: inline-block;
+	cursor: pointer;
+	border: 1px solid #ccc;
+	font-size: 16px;
+	width: 100px;
+	line-height: 40px;
+	text-align: center;
+}
+.todo_form > button {
+	padding: 0;
+	background-color: #20ADEE;
+	color: white;
+	border: none;
+	display: inline-block;
+	cursor: pointer;
+	text-align: center;
+	text-decoration: none;
+	width: 100px;
+	font-size: 16px;
+	line-height: 40px;
+}
+.submit_btn {
+	position: absolute;
+	bottom: 20px;
+	right: 120px;
+}
+.reset_btn {
+	position: absolute;
+	bottom: 20px;
+	right: 0px;
 }
