--- a/WebContent/aboutme/aboutme.css
+++ b/WebContent/aboutme/aboutme.css
@@ -1,21 +1,24 @@
 @charset "UTF-8";
 
-#text-list {
+#introduce {
 	margin-left: 100px;
 	margin-right: 150px;
 	text-align: left;
 }
 
-ul a {
+#my_page {
 	text-decoration: none;
+	color:blue;
 }
+
 
 .title {
 	font-size: 2em;
 	font-weight: bold;
+	margin-top: 20px;
 }
 
 .contents {
 	font-size: 1.3em;
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 }
