--- a/WebContent/aboutme/index.css
+++ b/WebContent/aboutme/index.css
@@ -1,12 +1,8 @@
 @charset "UTF-8";
 
-#h-t {
+#index_button_align {
 	text-align: center;
 	margin-right: 50px;
-}
-
-ul a {
-	text-decoration: none;
 }
 
 #map {
@@ -16,26 +12,7 @@ ul a {
 	width: 50%;
 }
 
-.home-btn {
-	color: #ffffff;
-	font-weight: bold;
-	background: #8cbac7;
-	box-shadow: 2px 2px 10px 1px gray;
-	font-size: 1.5em;
-	width: 200px;
-	height: 200px;
-	margin-left: 40px;
-	margin-right: -10px;
-	display: inline-block;
-	text-align: center;
-	line-height: 200px;
-}
-
-.home-btn:hover {
-	color: #eecbb0;
-}
-
-.title {
+#title {
 	font-size: 2em;
 	font-weight: bold;
 	margin-top: 30px;
@@ -43,9 +20,28 @@ ul a {
 	text-align: center;
 }
 
-.contents {
+#contents {
 	font-size: 1.3em;
 	margin-top: 30px;
 	margin-bottom: 30px;
 	text-align: center;
+}
+
+.index_button {
+	color: #ffffff;
+	font-weight: bold;
+	background: #8cbac7;
+	box-shadow: 2px 2px 10px 1px gray;
+	font-size: 1.5em;
+	width: 200px;
+	height: 200px;
+	margin-left: 20px;
+	margin-right: -10px;
+	display: inline-block;
+	text-align: center;
+	line-height: 200px;
+}
+
+.index_button:hover {
+	color: #eecbb0;
 }
