--- a/WebContent/aboutme/photo.css
+++ b/WebContent/aboutme/photo.css
@@ -1,25 +1,24 @@
 @charset "UTF-8";
-ul li img {
-	width: 200px;
-}
 
-section ul{
+.my_photo_list{
 	text-align: left;
+	margin-top: 75px;
+	padding-bottom: 75px;
+	border-bottom: 1px solid lightgray; 
+	margin-right: 5%;
 }
 
-section ul li {
-	margin-top: 75px;
-	margin-bottom: 75px;
+.my_photo_list:last-child{
+	border-bottom:0;
+}
+
+.my_photo{
+	width: 20%;
 }
 
 .contents {
-	font-size: 1em;
 	line-height: 200%;
 	display: inline-block;
-	margin-left: 30px;
+	margin-left: 5%;
 }
 
-#draw_line{
-	border-bottom: 1px solid lightgray; 
-	margin-right: 50px;
-}
