--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -10,13 +10,17 @@ body {
    padding: 0;
    height: 100%;
    width: 100%;
+   background-color: #EDEDED;
 }
 
 /*
 	main.jsp css
 */
 .container {
-	width: 100%;
+	margin: 0 auto;
+	background-color: white;
+	position: relative;
+	width: 1200px;
 	height: 100%;
 }
 .container > h1 {
@@ -105,13 +109,17 @@ body {
 	todoForm.jsp css
 */
 .todo_page_container {
-	width: 100%;
+	margin: 0 auto;
+	background-color: white;
+	position: relative;
+	width: 1200px;
 	height: 100%;
+	padding-top: 50px;
 }
 .todo_page_container > h1 {
 	text-align: center;
 	font-size: 40px;
-	margin: 50px 0 15px;
+	margin-bottom: 15px;
 }
 .todo_form {
 	width: 500px;
