--- a/src/main/webapp/css/base.css
+++ b/src/main/webapp/css/base.css
@@ -4,11 +4,12 @@ header {
 	display: table;
 	overflow: auto;
 	width: 100%;
+	height: 5em;
 	padding: 20px 0 20px 0;
 }
 
 section {
-	padding: 0 10% 0 10%;
+	padding: 0 5% 0 10%;
 }
 
 table {
@@ -16,19 +17,20 @@ table {
 	width: 100%;
 }
 
-th, td{
+th, td {
 	height: 4em;
 	text-align: left;
 	width: 33%;
 }
-th{
-	padding:10px;
+
+th {
+	padding: 10px;
 	background-color: blue;
 	color: white;
 }
 
 td {
-	overflow: auto;
+	overflow: inherit;
 	vertical-align: top;
 }
 
@@ -49,32 +51,88 @@ li {
 	overflow: auto;
 }
 
-p {
-	font-size: 10pt;
-	display: table-cell;
-	vertical-align: middle;
+h1 {
+	text-align: center;
 }
 
-.content_title{
+p {
+	font-size: 10pt;
+	width: auto;
+	margin: 0 auto;
+}
+
+form {
+	margin: 0 20%;
+}
+
+.text_input {
+	width: 100%;
+}
+
+.addTodo_button {
+	width: 20%;
+	height: 10%;
+	padding: 10px;
+	margin: 0 10px;
+}
+
+input[type=button] {
+	float: left;
+	background-color: white;
+	border: solid 2px #aaaaaa;
+	text-decoration: underline;
+}
+
+input[type=submit] {
+	color: white;
+	background-color: cornflowerblue;
+	float: right;
+}
+
+input[type=reset] {
+	color: white;
+	background-color: cornflowerblue;
+	float: right;
+}
+
+.content_title {
 	text-overflow: ellipsis;
 }
 
 .header_left_text {
-	font: 20px bold;
+	font: 30px bold;
+	margin-top:2em;
 	float: left;
 	transform: rotate(-30deg);
+	
 }
 
-.button-wrapper {
+.button {
+	background-color: #2fa8a0;
+	border-radius: 0.5em;
+	box-shadow: 0.5em 0.5em #888888;
+	display: table;
+	float: right;
+	height: 100%;
+}
+
+.button>a {
 	display: table-cell;
 	vertical-align: middle;
-	width: 30%;
+	text-align: center;
+	text-decoration: none;
+	color: ghostwhite;
+	width: auto;
+	height: auto;
+	padding:10px;
 }
 
 .header_right_button {
-	display: block;
+	display: inline-block;
+	vertical-align: middle;
 	width: 100%;
-	margin: 0 auto;
+	height: 100%;
+	text-align: center;
 	background-color: #2fa8a0;
 	border-radius: 0.5em;
 	box-shadow: 0.5em 0.5em #888888;
