--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -172,7 +172,7 @@ body {
 	line-height: 40px;
 	text-align: center;
 }
-.todo_form > button {
+.todo_form > input[type=reset], .todo_form > input[type=submit] {
 	padding: 0;
 	background-color: #20ADEE;
 	color: white;
