--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -21,7 +21,6 @@ body {
 	background-color: white;
 	position: relative;
 	width: 1200px;
-	height: 100%;
 }
 .container > h1 {
 	margin: 5px 5px;
@@ -49,9 +48,8 @@ body {
 
 .todo_list_container {
 	display: inline-block;
-	position: absolute;
-	right: 10px;
-	top: 130px;
+	margin-top: 80px;
+	margin-left: 140px;
 }
 
 .todo_list_container > ul {
