--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -1,10 +1,12 @@
+@charset "UTF-8";
+
 body {
 	background-color: #e9e8ff;
 }
 
 .content {
 	max-width: 1024px;
-	min-height: 768px;
+	min-height: 480px;
 	background-color: white;
 	box-sizing: border-box;
 	margin: auto;
