--- a/src/main/webapp/css/base.css
+++ b/src/main/webapp/css/base.css
@@ -59,6 +59,7 @@ p {
 	font-size: 10pt;
 	width: auto;
 	margin: 0 auto;
+	line-height: 2;
 }
 
 form {
@@ -101,13 +102,12 @@ input[type=reset] {
 
 .header_left_text {
 	font: 30px bold;
-	margin-top:2em;
+	margin-top: 1em;
 	float: left;
 	transform: rotate(-30deg);
-	
 }
 
-.button {
+.header_button {
 	background-color: #2fa8a0;
 	border-radius: 0.5em;
 	box-shadow: 0.5em 0.5em #888888;
@@ -116,7 +116,7 @@ input[type=reset] {
 	height: 100%;
 }
 
-.button>a {
+.header_button>a {
 	display: table-cell;
 	vertical-align: middle;
 	text-align: center;
@@ -124,10 +124,10 @@ input[type=reset] {
 	color: ghostwhite;
 	width: auto;
 	height: auto;
-	padding:10px;
+	padding: 10px;
 }
 
-.header_right_button {
+.header_button_inner {
 	display: inline-block;
 	vertical-align: middle;
 	width: 100%;
@@ -138,13 +138,13 @@ input[type=reset] {
 	box-shadow: 0.5em 0.5em #888888;
 }
 
-.header_right_button:active {
+.header_button_inner:active {
 	background-color: #0f8880;
 	box-shadow: 0 5px #666;
 	transform: translateY(4px);
 }
 
-.header_right_button:hover {
+.header_button_inner:hover {
 	cursor: pointer;
 }
 
