minor fixes in naming

--- a/src/main/webapp/css/base.css
+++ b/src/main/webapp/css/base.css
@@ -1,15 +1,28 @@
 @charset "UTF-8";
 
+body {
+	background-color: aliceblue;
+	padding: 50px;
+}
+
 header {
 	display: table;
 	overflow: auto;
 	width: 100%;
 	height: 5em;
 	padding: 20px 0 20px 0;
+	background-color: white;
 }
 
 section {
+	padding: 10%;
+	background-color: white;
+	overflow: auto;
+}
+.section_main {
 	padding: 0 5% 0 10%;
+	background-color: white;
+	overflow: auto;
 }
 
 table {
@@ -107,35 +120,20 @@ input[type=reset] {
 	transform: rotate(-30deg);
 }
 
-.header_button {
+.header_button_wrapper {
 	background-color: #2fa8a0;
 	border-radius: 0.5em;
 	box-shadow: 0.5em 0.5em #888888;
-	display: table;
 	float: right;
-	height: 100%;
-}
-
-.header_button>a {
-	display: table-cell;
-	vertical-align: middle;
-	text-align: center;
-	text-decoration: none;
-	color: ghostwhite;
-	width: auto;
-	height: auto;
-	padding: 10px;
+	padding: 20px;
+	margin: 10px;
 }
 
 .header_button_inner {
 	display: inline-block;
-	vertical-align: middle;
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	background-color: #2fa8a0;
-	border-radius: 0.5em;
-	box-shadow: 0.5em 0.5em #888888;
+    vertical-align: middle;
+    text-align: center;
+    background-color: #2fa8a0;
 }
 
 .header_button_inner:active {
