--- a/src/main/webapp/css/base.css
+++ b/src/main/webapp/css/base.css
@@ -15,10 +15,12 @@ header {
 }
 
 section {
-	padding: 10%;
+	padding: 5% 10%;
 	background-color: white;
 	overflow: auto;
+	vertical-align: top
 }
+
 .section_main {
 	padding: 0 5% 0 10%;
 	background-color: white;
@@ -121,29 +123,22 @@ input[type=reset] {
 }
 
 .header_button_wrapper {
-	background-color: #2fa8a0;
-	border-radius: 0.5em;
-	box-shadow: 0.5em 0.5em #888888;
 	float: right;
-	padding: 20px;
-	margin: 10px;
+	display: table;
+	width: 20%;
+	height: 100%;
+	margin-right: 10%;
 }
 
 .header_button_inner {
-	display: inline-block;
-    vertical-align: middle;
-    text-align: center;
-    background-color: #2fa8a0;
-}
-
-.header_button_inner:active {
-	background-color: #0f8880;
-	box-shadow: 0 5px #666;
-	transform: translateY(4px);
-}
-
-.header_button_inner:hover {
-	cursor: pointer;
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+	background-color: #2fa8a0;
+	border-radius: 0.5em;
+	box-shadow: 0.5em 0.5em #888888;
+	text-decoration: none;
+	color: white;
 }
 
 .content_move_button {
