--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -19,7 +19,6 @@
 		margin-left: 10%;
 	}
 
-
 	.right{
 		float: right;
 		margin-bottom: 50px;
@@ -95,13 +94,16 @@
 
 	.photo_post{
 		margin: 20px;
+		display: inline-block;
 	}
 
 	.photo_post img{
 		margin: 20px;
+		display: inline-block;
 	}
 
 	.photo_post p{
 		line-height: 2;
 		width: 700px;
+		display: inline-block;
 	}
