--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,23 +1,24 @@
 @charset "UTF-8";
 
 /* 전역 */
+body {
+	background: #ECF0EE;
+}
+
 a:link {
 	text-decoration: none;
 }
 
-.container {
-	margin: 0 100px;
-}
-
+/* index.jsp */
 /* header */
-.rotate {
+.rotated_title {
 	transform: rotate(-30deg);
 	display: inline-block;
 	color: #3D6072;
 	margin: 40px 0 20px 0;
 }
 
-.register_button {
+.go_register_button {
 	color: #fff;
 	background: #20ADEE;
 	padding: 6px 20px;
@@ -28,6 +29,13 @@ a:link {
 }
 
 /* main section */
+.content {
+	width: 55%;
+	margin: auto;
+	background: white;
+	padding: 50px 100px; 
+}
+
 .content_main {
 	float: right;
 }
@@ -56,4 +64,31 @@ a:link {
 
 .card h3 {
 	margin: 0 0 5px 0;
+}
+
+/* register.jsp */
+.register_content {
+	width: 30%;
+	margin: auto;
+	background: white;
+	padding: 50px 100px; 
+}
+
+.register_button {
+	color: #fff;
+	background: #20ADEE;
+	padding: 6px 20px;
+	font-size: 12px;
+	margin: 0 5px 0 0;
+	display: inline-block;
+	border: 0px;
+}
+
+.previous_button {
+	border: 1px solid #000;
+	padding: 5px 15px;
+	color: #000;
+	font-size: 12px;
+	margin: 0 100px 0 0;
+	display: inline-block;
 }
