--- a/src/main/webapp/css/todo.css
+++ b/src/main/webapp/css/todo.css
@@ -78,3 +78,44 @@
 .sequence {
 	display : inline;
 }
+
+h1{
+	text-align : center;	
+}
+
+ form {
+	padding-left : 150px;
+}
+
+ input[type="text"] {
+	width : 800px;
+	height : 40px;
+}
+
+ input[type="submit"] {
+	position : absolute;
+	right : 230px;
+	width : 100px;
+	height : 50px;
+	background-color: #6698cb;
+	border: none;
+	color: white;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+}
+
+ input[type="reset"] {
+	position : absolute;
+	right : 120px;
+	width : 100px;
+	height : 50px;
+	background-color: #6698cb;
+	border: none;
+	color: white;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+}
