--- a/src/main/webapp/css/todo.css
+++ b/src/main/webapp/css/todo.css
@@ -1,55 +1,56 @@
 @charset "UTF-8";
 
-#main_title{
-	display : inline-block;
-	padding-top : 45px;
-	padding-right : 45px;
-	margin-left : -25px;
-	-webkit-transform : rotate(-30deg); 
-	-ms-transform : rotate(-30deg); 
+#main_title {
+	display: inline-block;
+	padding-top: 45px;
+	padding-right: 45px;
+	margin-left: -25px;
+	-webkit-transform: rotate(-30deg); 
+	-ms-transform: rotate(-30deg);
+	color: #008299;
 }
 
 .todos {
-	display : table;
-	margin-top : 50px;
-	margin-left : 200px;
-	width : 80%;
+	display: table;
+	margin-top: 50px;
+	margin-left: 200px;
+	width: 80%;
 }
 
 #new_todo {
-	position : absolute;
-	top : 50px;
-	right : 50px;
-	padding : 15px 15px;
-	text-align : center;
-	text-decoration : none;
-	background-color : #5CD1E5;
-	color : #fff;
+	position: absolute;
+	top: 50px;
+	right: 50px;
+	padding: 15px 15px;
+	text-align: center;
+	text-decoration: none;
+	background-color: #5CD1E5;
+	color: #fff;
 	
 }
 
 .todos > div {
-	display : table-cell;
-	width : 30%;
-	padding : 0 5px;
+	display: table-cell;
+	width: 30%;
+	padding: 0 5px;
 }
 
 .todos ul {
 	list-style: none;
-	padding : 0;
+	padding: 0;
 }
 
 .todos > div > p {
-	margin : 0;
-	padding : 20px 10px;
-	background-color : #056;
-	color : #fff;
+	margin: 0;
+	padding: 20px 10px;
+	background-color: #056;
+	color: #fff;
 }
 
 .todos li {
-	background-color : #D4F4FA;
+	background-color: #D4F4FA;
 	margin: 15px auto;
-	padding : 20px;
+	padding: 20px;
 }
 
 .todos li > * {
@@ -62,41 +63,62 @@
 }
 
 .go_next {
-	width : 25px;
-	height : 25px;
-	float : right;
+	width: 25px;
+	height: 25px;
+	float: right;
+	cursor: pointer;
 }
 
 .regdate {
-	display : inline;
+	display: inline;
 }
 
 .name {
-	display : inline;
+	display: inline;
 }
 
 .sequence {
-	display : inline;
+	display: inline;
 }
 
 h1{
-	text-align : center;	
+	text-align: center;	
 }
 
- form {
-	padding-left : 150px;
+form {
+	width:70%;
+	margin: 0 auto;
+	position: absoulte;
 }
 
- input[type="text"] {
-	width : 800px;
-	height : 40px;
+input[name="title"] {
+	width: 800px;
+	height: 40px;
 }
 
- input[type="submit"] {
-	position : absolute;
-	right : 230px;
-	width : 100px;
-	height : 50px;
+input[name="name"] {
+	width: 400px;
+	height: 40px;
+}
+
+#radio_section {
+	margin-bottom: 30px;
+}
+
+previous_page {
+	display: inline-block;
+	width: 100px;
+	padding: 15px 0;
+	text-align: center;
+	border: 1px solid #000;
+	color: #000;
+}
+
+input[type="submit"] {
+	position: relative;
+	left: 80%;
+	width: 100px;
+	height: 50px;
 	background-color: #6698cb;
 	border: none;
 	color: white;
@@ -104,13 +126,14 @@ h1{
 	text-decoration: none;
 	display: inline-block;
 	font-size: 16px;
+	cursor: pointer;
 }
 
- input[type="reset"] {
-	position : absolute;
-	right : 120px;
-	width : 100px;
-	height : 50px;
+input[type="reset"] {
+	position: relative;
+	left: 80%;
+	width: 100px;
+	height: 50px;
 	background-color: #6698cb;
 	border: none;
 	color: white;
@@ -118,4 +141,5 @@ h1{
 	text-decoration: none;
 	display: inline-block;
 	font-size: 16px;
+	cursor: pointer;
 }
