--- a/src/main/webapp/css/todo.css
+++ b/src/main/webapp/css/todo.css
@@ -105,7 +105,7 @@ input[name="name"] {
 	margin-bottom: 30px;
 }
 
-previous_page {
+.previous_page {
 	display: inline-block;
 	width: 100px;
 	padding: 15px 0;
