메인 페이지를 요구사항에 맞게 더 조정

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -52,11 +52,12 @@ section {
 	height: 30px;
 	padding-top: 5px;
 	float: right;
+	margin-right: 2.5%;	
 }
 
 .art_container>article {
 	display: inline-block;
-	width: 30%;
+	width: 32%;
 	float: left;
 	margin-left: 5px;
 }
