--- a/src/main/webapp/css/base.css
+++ b/src/main/webapp/css/base.css
@@ -1,3 +1,11 @@
+
+/**
+ * Copyright 2019 NAVER Corp.
+ * All rights reserved.
+ * Except in the case of internal use for NAVER,
+ * unauthorized use of redistribution of this software are strongly prohibited. 
+ */
+ 
 @charset "UTF-8";
 
 body {
