--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 html {
-	min-width: 1400px;
+	min-width: 1484px;
 	height: 100%;
 	width: 100%;
 	text-align: center;
@@ -87,6 +87,11 @@ th {
 
 .do_name {
 	font-weight: bold;
+    display: inline-block;
+    width: 90%;
+    height: 20px;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .do_description {
