코딩컨벤션 적용

--- a/src/main/webapp/css/todo.css
+++ b/src/main/webapp/css/todo.css
@@ -21,7 +21,7 @@
 	position: absolute;
 	top: 50px;
 	right: 50px;
-	padding: 15px 15px;
+	padding: 15px;
 	text-align: center;
 	text-decoration: none;
 	background-color: #5CD1E5;
@@ -81,7 +81,7 @@
 	display: inline;
 }
 
-h1{
+h1 {
 	text-align: center;	
 }
 
