--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 html {
-	min-width: 1484px;
+	min-width: 1492px;
 	height: 100%;
 	width: 100%;
 	text-align: center;
@@ -92,6 +92,7 @@ th {
     height: 20px;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .do_description {
