css 말줄임 기능 추가
- Card내 텍스트가 카드크기보다 넘칠경우 ....으로 표시

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -59,6 +59,15 @@
 	display: block;
 }
 
+#list_board > .container > .card > span {
+	display: inline-block;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	word-wrap: normal;
+	overflow: hidden;
+	width: 230px;
+}
+
 #list_board > .container > .card button {
 	float: right;
 	margin-right: 10px;
