--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -6,6 +6,7 @@ body {
 
 .content {
 	max-width: 1024px;
+	min-width: 950px;
 	min-height: 480px;
 	background-color: white;
 	box-sizing: border-box;
